update avec optionnelle

--- a/Gestion_Ticketing/index.html
+++ b/Gestion_Ticketing/index.html
@@ -17,9 +17,17 @@
             <div class="form-group">
                 <label for="password">Mot de passe</label>
                 <input type="password" id="password" name="password" required>
+                <div style="text-align: right; margin-top: 5px;">
+                    <a href="forgot-password.html" style="font-size: 0.8rem; color: #666; text-decoration: none;">Mot de passe oublié ?</a>
+                </div>
             </div>
             <button type="submit" style="width: 100%;">Se connecter</button>
         </form>
+
+        <div style="text-align: center; margin-top: 20px; padding-top: 20px; border-top: 1px solid #eee;">
+            <p style="font-size: 0.9rem;">Pas encore de compte ?</p>
+            <a href="register.html" style="color: var(--accent-color); font-weight: bold; text-decoration: none;">Créer un compte</a>
+        </div>
     </div>
 </body>
 </html>
