--- a/Gestion_Ticketing/dashboard.html
+++ b/Gestion_Ticketing/dashboard.html
@@ -8,25 +8,41 @@
 </head>
 <body>
     <aside class="sidebar">
-        <h2>Ticketing App</h2>
-        <nav>
-            <ul>
-                <li><a href="dashboard.html" class="active">Tableau de bord</a></li>
-                <li><a href="projects.html">Projets</a></li>
-                <li><a href="tickets.html">Tickets</a></li>
-            </ul>
-        </nav>
-        <div class="user-info">
-            <p>Connecté en tant que :</p>
-            <strong>Ilan Rubaud</strong><br>
-            <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem;">Déconnexion</a>
+    <h2>Ticketing App</h2>
+    <nav>
+        <ul>
+            <li><a href="dashboard.html">Tableau de bord</a></li>
+            <li><a href="projects.html">Projets</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
+            <li><a href="settings.html">Paramètres</a></li>
+        </ul>
+    </nav>
+    
+    <div class="user-info">
+        <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
+        <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none; display: flex; align-items: center;">
+            <div style="width: 24px; height: 24px; background: #fff; color: var(--primary-color); border-radius: 50%; margin-right: 8px; display:flex; justify-content:center; align-items:center; font-size:0.7rem;">IR</div>
+            Ilan Rubaud
+        </a>
+        <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
+            <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
         </div>
-    </aside>
+    </div>
+</aside>
 
     <main class="content">
         <header>
             <h1>Tableau de bord</h1>
-            <a href="ticket-new.html" class="btn">+ Nouveau Ticket</a>
+    
+            <div class="actions">
+                <a href="project-new.html" class="btn" style="background-color: #7f8c8d; margin-right: 10px;">
+                    + Nouveau Projet
+                </a>
+
+                <a href="ticket-new.html" class="btn">
+                    + Nouveau Ticket
+                </a>
+            </div>
         </header>
 
         <section class="grid-3">
