--- a/Gestion_Ticketing/projects.html
+++ b/Gestion_Ticketing/projects.html
@@ -8,27 +8,37 @@
 </head>
 <body>
     <aside class="sidebar">
-        <h2>Ticketing App</h2>
-        <nav>
-            <ul>
-                <li><a href="dashboard.html">Tableau de bord</a></li>
-                <li><a href="projects.html" class="active">Projets</a></li>
-                <li><a href="tickets.html">Tickets</a></li>
-            </ul>
-        </nav>
-        <div class="user-info">
-            <p>Connecté : Ilan Rubaud</p>
+    <h2>Ticketing App</h2>
+    <nav>
+        <ul>
+            <li><a href="dashboard.html">Tableau de bord</a></li>
+            <li><a href="projects.html">Projets</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
+            <li><a href="settings.html">Paramètres</a></li>
+        </ul>
+    </nav>
+    
+    <div class="user-info">
+        <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
+        <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none; display: flex; align-items: center;">
+            <div style="width: 24px; height: 24px; background: #fff; color: var(--primary-color); border-radius: 50%; margin-right: 8px; display:flex; justify-content:center; align-items:center; font-size:0.7rem;">IR</div>
+            Ilan Rubaud
+        </a>
+        <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
+            <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
         </div>
-    </aside>
+    </div>
+</aside>
 
     <main class="content">
         <header>
             <h1>Projets Client</h1>
+            <a href="project-new.html" class="btn">+ Nouveau Projet</a>
         </header>
 
         <section class="grid-2">
             <article class="card">
-                <h3>Refonte Site E-commerce</h3>
+                <h3><a href="project-detail.html" style="text-decoration: none; color: inherit;">Refonte Site E-commerce</a></h3>
                 <p><strong>Client :</strong> Boutique Mode SA</p>
                 <p><strong>Contrat :</strong> Maintenance 50h/an</p>
                 <hr style="margin: 10px 0; border: 0; border-top: 1px solid #eee;">
@@ -37,17 +47,19 @@
                     <div style="background: var(--success-color); width: 24%; height: 100%; border-radius: 5px;"></div>
                 </div>
                 <div style="margin-top: 15px;">
+                    <a href="project-detail.html" class="btn" style="font-size: 0.8rem; background-color: #7f8c8d;">Détails</a>
                     <a href="tickets.html" class="btn" style="font-size: 0.8rem;">Voir les tickets</a>
                 </div>
             </article>
 
             <article class="card">
-                <h3>CRM Intranet</h3>
+                <h3><a href="project-detail.html" style="text-decoration: none; color: inherit;">CRM Intranet</a></h3>
                 <p><strong>Client :</strong> Assurance Plus</p>
                 <p><strong>Contrat :</strong> TMA Illimité</p>
                 <hr style="margin: 10px 0; border: 0; border-top: 1px solid #eee;">
                 <p>Heures consommées : <strong>145h</strong></p>
                  <div style="margin-top: 15px;">
+                    <a href="project-detail.html" class="btn" style="font-size: 0.8rem; background-color: #7f8c8d;">Détails</a>
                     <a href="tickets.html" class="btn" style="font-size: 0.8rem;">Voir les tickets</a>
                 </div>
             </article>
