--- a/Gestion_Ticketing/tickets.html
+++ b/Gestion_Ticketing/tickets.html
@@ -8,18 +8,27 @@
 </head>
 <body>
     <aside class="sidebar">
-        <h2>Ticketing App</h2>
-        <nav>
-            <ul>
-                <li><a href="dashboard.html">Tableau de bord</a></li>
-                <li><a href="projects.html">Projets</a></li>
-                <li><a href="tickets.html" class="active">Tickets</a></li>
-            </ul>
-        </nav>
-        <div class="user-info">
-            <p>Connecté : Ilan Rubaud</p>
+    <h2>Ticketing App</h2>
+    <nav>
+        <ul>
+            <li><a href="dashboard.html">Tableau de bord</a></li>
+            <li><a href="projects.html">Projets</a></li>
+            <li><a href="tickets.html">Tickets</a></li>
+            <li><a href="settings.html">Paramètres</a></li>
+        </ul>
+    </nav>
+    
+    <div class="user-info">
+        <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
+        <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none; display: flex; align-items: center;">
+            <div style="width: 24px; height: 24px; background: #fff; color: var(--primary-color); border-radius: 50%; margin-right: 8px; display:flex; justify-content:center; align-items:center; font-size:0.7rem;">IR</div>
+            Ilan Rubaud
+        </a>
+        <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
+            <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
         </div>
-    </aside>
+    </div>
+</aside>
 
     <main class="content">
         <header>
