dashborad update bouton proj

--- a/Gestion_Ticketing/dashboard.html
+++ b/Gestion_Ticketing/dashboard.html
@@ -45,7 +45,7 @@
             </div>
         </header>
 
-        <section class="grid-3">
+        <section class="grid-4">
             <div class="card">
                 <h3>Tickets en cours</h3>
                 <p style="font-size: 2rem; font-weight: bold; color: var(--accent-color);">12</p>
@@ -53,6 +53,10 @@
             <div class="card">
                 <h3>À valider (Client)</h3>
                 <p style="font-size: 2rem; font-weight: bold; color: var(--warning-color);">3</p>
+            </div>
+            <div class="card">
+                <h3>Collaborateurs</h3>
+                <p style="font-size: 2rem; font-weight: bold; color: #9b59b6;">8</p>
             </div>
             <div class="card">
                 <h3>Heures ce mois</h3>
