--- a/Gestion_Ticketing/forgot-password.html
+++ b/Gestion_Ticketing/forgot-password.html
@@ -23,5 +23,6 @@
             <a href="index.html" style="color: var(--accent-color); text-decoration: none;">Retour à la connexion</a>
         </div>
     </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
