--- a/Gestion_Ticketing/register.html
+++ b/Gestion_Ticketing/register.html
@@ -47,5 +47,6 @@
             Déjà un compte ? <a href="index.html" style="color: var(--accent-color); text-decoration: none;">Se connecter</a>
         </div>
     </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
