--- a/Gestion_Ticketing/index.html
+++ b/Gestion_Ticketing/index.html
@@ -29,5 +29,6 @@
             <a href="register.html" style="color: var(--accent-color); font-weight: bold; text-decoration: none;">Créer un compte</a>
         </div>
     </div>
+    <script src="js/app.js"></script>
 </body>
 </html>
