--- a/Gestion_Ticketing/dashboard.html
+++ b/Gestion_Ticketing/dashboard.html
@@ -8,59 +8,49 @@
 </head>
 <body>
     <aside class="sidebar">
-    <h2>Ticketing App</h2>
-    <nav>
-        <ul>
-            <li><a href="dashboard.html">Tableau de bord</a></li>
-            <li><a href="projects.html">Projets</a></li>
-            <li><a href="tickets.html">Tickets</a></li>
-            <li><a href="settings.html">Paramètres</a></li>
-        </ul>
-    </nav>
-    
-    <div class="user-info">
-        <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
-        <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none; display: flex; align-items: center;">
-            <div style="width: 24px; height: 24px; background: #fff; color: var(--primary-color); border-radius: 50%; margin-right: 8px; display:flex; justify-content:center; align-items:center; font-size:0.7rem;">IR</div>
-            Ilan Rubaud
-        </a>
-        <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
-            <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+        <h2>Ticketing App</h2>
+        <nav>
+            <ul>
+                <li><a href="dashboard.html" class="active">Tableau de bord</a></li>
+                <li><a href="projects.html">Projets</a></li>
+                <li><a href="tickets.html">Tickets</a></li>
+                <li><a href="settings.html">Paramètres</a></li>
+            </ul>
+        </nav>
+        <div class="user-info">
+             <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
+             <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none;">Ilan Rubaud</a>
+             <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
+                <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+            </div>
         </div>
-    </div>
-</aside>
+    </aside>
 
     <main class="content">
         <header>
             <h1>Tableau de bord</h1>
-    
             <div class="actions">
-                <a href="project-new.html" class="btn" style="background-color: #7f8c8d; margin-right: 10px;">
-                    + Nouveau Projet
-                </a>
-
-                <a href="ticket-new.html" class="btn">
-                    + Nouveau Ticket
-                </a>
+                <a href="project-new.html" class="btn" style="background-color: #7f8c8d; margin-right: 10px;">+ Nouveau Projet</a>
+                <a href="ticket-new.html" class="btn">+ Nouveau Ticket</a>
             </div>
         </header>
 
         <section class="grid-4">
             <div class="card">
                 <h3>Tickets en cours</h3>
-                <p style="font-size: 2rem; font-weight: bold; color: var(--accent-color);">12</p>
+                <p class="animate-number" style="font-size: 2rem; font-weight: bold; color: var(--accent-color);">12</p>
             </div>
             <div class="card">
                 <h3>À valider (Client)</h3>
-                <p style="font-size: 2rem; font-weight: bold; color: var(--warning-color);">3</p>
+                <p class="animate-number" style="font-size: 2rem; font-weight: bold; color: var(--warning-color);">3</p>
             </div>
             <div class="card">
                 <h3>Collaborateurs</h3>
-                <p style="font-size: 2rem; font-weight: bold; color: #9b59b6;">8</p>
+                <p class="animate-number" style="font-size: 2rem; font-weight: bold; color: #9b59b6;">8</p>
             </div>
             <div class="card">
                 <h3>Heures ce mois</h3>
-                <p style="font-size: 2rem; font-weight: bold;">34h</p>
+                <p class="animate-number" style="font-size: 2rem; font-weight: bold;">34h</p>
             </div>
         </section>
 
