--- a/Gestion_Ticketing/forgot-password.html
+++ b/Gestion_Ticketing/forgot-password.html
@@ -11,10 +11,10 @@
         <h2 style="text-align: center; margin-bottom: 20px;">Réinitialisation</h2>
         <p style="text-align: center; margin-bottom: 20px; color: #666;">Entrez votre email pour recevoir un lien de réinitialisation.</p>
         
-        <form action="index.html">
+        <form id="forgotForm">
             <div class="form-group">
-                <label for="email">Email</label>
-                <input type="email" id="email" name="email" placeholder="admin@esn.com" required>
+                <label for="f-email">Email</label>
+                <input type="email" id="f-email" name="email" placeholder="admin@esn.com" required>
             </div>
             <button type="submit" style="width: 100%;">Envoyer le lien</button>
         </form>
