--- a/Gestion_Ticketing/index.html
+++ b/Gestion_Ticketing/index.html
@@ -9,7 +9,8 @@
 <body class="login-page">
     <div class="card" style="width: 100%; max-width: 400px;">
         <h2 style="text-align: center; margin-bottom: 20px;">Connexion</h2>
-        <form action="dashboard.html">
+        
+        <form id="loginForm">
             <div class="form-group">
                 <label for="email">Email</label>
                 <input type="email" id="email" name="email" placeholder="admin@esn.com" required>
