--- a/Gestion_Ticketing/profile.html
+++ b/Gestion_Ticketing/profile.html
@@ -8,27 +8,23 @@
 </head>
 <body>
     <aside class="sidebar">
-    <h2>Ticketing App</h2>
-    <nav>
-        <ul>
-            <li><a href="dashboard.html">Tableau de bord</a></li>
-            <li><a href="projects.html">Projets</a></li>
-            <li><a href="tickets.html">Tickets</a></li>
-            <li><a href="settings.html">Paramètres</a></li>
-        </ul>
-    </nav>
-    
-    <div class="user-info">
-        <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
-        <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none; display: flex; align-items: center;">
-            <div style="width: 24px; height: 24px; background: #fff; color: var(--primary-color); border-radius: 50%; margin-right: 8px; display:flex; justify-content:center; align-items:center; font-size:0.7rem;">IR</div>
-            Ilan Rubaud
-        </a>
-        <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
-            <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+        <h2>Ticketing App</h2>
+        <nav>
+            <ul>
+                <li><a href="dashboard.html">Tableau de bord</a></li>
+                <li><a href="projects.html">Projets</a></li>
+                <li><a href="tickets.html">Tickets</a></li>
+                <li><a href="settings.html">Paramètres</a></li>
+            </ul>
+        </nav>
+        <div class="user-info">
+             <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
+             <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none;">Ilan Rubaud</a>
+             <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
+                <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+            </div>
         </div>
-    </div>
-</aside>
+    </aside>
 
     <main class="content">
         <header>
@@ -37,18 +33,14 @@
 
         <div class="grid-2">
             <div class="card">
-                <h3>Informations Personnelles</h3>
+                <h3>Mes informations</h3>
                 <div style="text-align: center; margin: 20px 0;">
-                    <div style="width: 100px; height: 100px; background: #2c3e50; border-radius: 50%; margin: 0 auto; display: flex; align-items: center; justify-content: center; color: white; font-size: 2rem;">IR</div>
+                    <div style="width: 80px; height: 80px; background: #2c3e50; border-radius: 50%; margin: 0 auto; display: flex; align-items: center; justify-content: center; color: white; font-size: 1.5rem;">IR</div>
                 </div>
-                <form>
+                <form id="profileForm">
                     <div class="form-group">
                         <label>Nom complet</label>
                         <input type="text" value="Ilan Rubaud" disabled style="background: #f9f9f9;">
-                    </div>
-                    <div class="form-group">
-                        <label>Email</label>
-                        <input type="email" value="ilan@esn.com" disabled style="background: #f9f9f9;">
                     </div>
                     <div class="form-group">
                         <label>Rôle</label>
@@ -58,21 +50,22 @@
             </div>
 
             <div class="card">
-                <h3>Changer de mot de passe</h3>
-                <form>
+                <h3>Sécurité</h3>
+                
+                <form id="passwordForm">
                     <div class="form-group">
-                        <label for="old-pass">Ancien mot de passe</label>
-                        <input type="password" id="old-pass">
+                        <label>Ancien mot de passe</label>
+                        <input type="password" required>
                     </div>
                     <div class="form-group">
-                        <label for="new-pass">Nouveau mot de passe</label>
-                        <input type="password" id="new-pass">
+                        <label>Nouveau mot de passe</label>
+                        <input type="password" required>
                     </div>
                     <div class="form-group">
-                        <label for="confirm-pass">Confirmer nouveau mot de passe</label>
-                        <input type="password" id="confirm-pass">
+                        <label>Confirmer nouveau mot de passe</label>
+                        <input type="password" required>
                     </div>
-                    <button type="button">Mettre à jour</button>
+                    <button type="submit">Mettre à jour</button>
                 </form>
             </div>
         </div>
