--- a/Gestion_Ticketing/project-new.html
+++ b/Gestion_Ticketing/project-new.html
@@ -8,34 +8,30 @@
 </head>
 <body>
     <aside class="sidebar">
-    <h2>Ticketing App</h2>
-    <nav>
-        <ul>
-            <li><a href="dashboard.html">Tableau de bord</a></li>
-            <li><a href="projects.html">Projets</a></li>
-            <li><a href="tickets.html">Tickets</a></li>
-            <li><a href="settings.html">Paramètres</a></li>
-        </ul>
-    </nav>
-    
-    <div class="user-info">
-        <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
-        <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none; display: flex; align-items: center;">
-            <div style="width: 24px; height: 24px; background: #fff; color: var(--primary-color); border-radius: 50%; margin-right: 8px; display:flex; justify-content:center; align-items:center; font-size:0.7rem;">IR</div>
-            Ilan Rubaud
-        </a>
-        <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
-            <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+        <h2>Ticketing App</h2>
+        <nav>
+            <ul>
+                <li><a href="dashboard.html">Tableau de bord</a></li>
+                <li><a href="projects.html" class="active">Projets</a></li>
+                <li><a href="tickets.html">Tickets</a></li>
+                <li><a href="settings.html">Paramètres</a></li>
+            </ul>
+        </nav>
+        <div class="user-info">
+             <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
+             <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none;">Ilan Rubaud</a>
+             <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
+                <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+            </div>
         </div>
-    </div>
-</aside>
+    </aside>
 
     <main class="content">
         <header>
             <h1>Nouveau Projet</h1>
         </header>
 
-        <form action="projects.html" class="card">
+        <form id="projectForm" class="card">
             <div class="form-group">
                 <label for="client">Client</label>
                 <select id="client" name="client" required>
@@ -46,13 +42,13 @@
             </div>
 
             <div class="form-group">
-                <label for="name">Nom du projet</label>
-                <input type="text" id="name" name="name" placeholder="Ex: Refonte Intranet" required>
+                <label for="p-name">Nom du projet</label>
+                <input type="text" id="p-name" name="name" placeholder="Ex: Refonte Intranet" required>
             </div>
 
             <div class="form-group">
-                <label for="description">Description</label>
-                <textarea id="description" name="description" rows="3"></textarea>
+                <label for="p-desc">Description</label>
+                <textarea id="p-desc" name="description" rows="3"></textarea>
             </div>
 
             <hr style="margin: 20px 0; border: 0; border-top: 1px solid #eee;">
@@ -60,7 +56,7 @@
 
             <div class="grid-2">
                 <div class="form-group">
-                    <label for="hours">Enveloppe d'heures (Total)</label>
+                    <label for="hours">Enveloppe d'heures</label>
                     <input type="number" id="hours" name="hours" placeholder="Ex: 50" required>
                 </div>
                 <div class="form-group">
