--- a/Gestion_Ticketing/projects.html
+++ b/Gestion_Ticketing/projects.html
@@ -8,33 +8,33 @@
 </head>
 <body>
     <aside class="sidebar">
-    <h2>Ticketing App</h2>
-    <nav>
-        <ul>
-            <li><a href="dashboard.html">Tableau de bord</a></li>
-            <li><a href="projects.html">Projets</a></li>
-            <li><a href="tickets.html">Tickets</a></li>
-            <li><a href="settings.html">Paramètres</a></li>
-        </ul>
-    </nav>
-    
-    <div class="user-info">
-        <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
-        <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none; display: flex; align-items: center;">
-            <div style="width: 24px; height: 24px; background: #fff; color: var(--primary-color); border-radius: 50%; margin-right: 8px; display:flex; justify-content:center; align-items:center; font-size:0.7rem;">IR</div>
-            Ilan Rubaud
-        </a>
-        <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
-            <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+        <h2>Ticketing App</h2>
+        <nav>
+            <ul>
+                <li><a href="dashboard.html">Tableau de bord</a></li>
+                <li><a href="projects.html" class="active">Projets</a></li>
+                <li><a href="tickets.html">Tickets</a></li>
+                <li><a href="settings.html">Paramètres</a></li>
+            </ul>
+        </nav>
+        <div class="user-info">
+             <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
+             <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none;">Ilan Rubaud</a>
+             <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
+                <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+            </div>
         </div>
-    </div>
-</aside>
+    </aside>
 
     <main class="content">
         <header>
             <h1>Projets Client</h1>
             <a href="project-new.html" class="btn">+ Nouveau Projet</a>
         </header>
+
+        <div style="margin-bottom: 20px;">
+            <input type="text" id="project-search" placeholder="🔍 Rechercher un projet..." style="width: 100%; max-width: 300px;">
+        </div>
 
         <section class="grid-2">
             <article class="card">
