--- a/Gestion_Ticketing/register.html
+++ b/Gestion_Ticketing/register.html
@@ -10,7 +10,7 @@
     <div class="card" style="width: 100%; max-width: 450px;">
         <h2 style="text-align: center; margin-bottom: 20px;">Créer un compte</h2>
         
-        <form action="dashboard.html">
+        <form id="registerForm">
             <div class="form-group">
                 <label for="fullname">Nom complet</label>
                 <input type="text" id="fullname" name="fullname" placeholder="Ex: Ilan Rubaud" required>
@@ -23,12 +23,12 @@
 
             <div class="grid-2" style="grid-template-columns: 1fr 1fr; gap: 10px;">
                 <div class="form-group">
-                    <label for="password">Mot de passe</label>
-                    <input type="password" id="password" name="password" required>
+                    <label for="reg-password">Mot de passe</label>
+                    <input type="password" id="reg-password" name="password" required>
                 </div>
                 <div class="form-group">
-                    <label for="confirm_password">Confirmation</label>
-                    <input type="password" id="confirm_password" name="confirm_password" required>
+                    <label for="reg-confirm">Confirmation</label>
+                    <input type="password" id="reg-confirm" name="confirm_password" required>
                 </div>
             </div>
 
