--- a/Gestion_Ticketing/ticket-new.html
+++ b/Gestion_Ticketing/ticket-new.html
@@ -8,27 +8,23 @@
 </head>
 <body>
     <aside class="sidebar">
-    <h2>Ticketing App</h2>
-    <nav>
-        <ul>
-            <li><a href="dashboard.html">Tableau de bord</a></li>
-            <li><a href="projects.html">Projets</a></li>
-            <li><a href="tickets.html">Tickets</a></li>
-            <li><a href="settings.html">Paramètres</a></li>
-        </ul>
-    </nav>
-    
-    <div class="user-info">
-        <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
-        <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none; display: flex; align-items: center;">
-            <div style="width: 24px; height: 24px; background: #fff; color: var(--primary-color); border-radius: 50%; margin-right: 8px; display:flex; justify-content:center; align-items:center; font-size:0.7rem;">IR</div>
-            Ilan Rubaud
-        </a>
-        <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
-            <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+        <h2>Ticketing App</h2>
+        <nav>
+            <ul>
+                <li><a href="dashboard.html">Tableau de bord</a></li>
+                <li><a href="projects.html">Projets</a></li>
+                <li><a href="tickets.html" class="active">Tickets</a></li>
+                <li><a href="settings.html">Paramètres</a></li>
+            </ul>
+        </nav>
+        <div class="user-info">
+             <p style="margin-bottom: 5px; font-size: 0.8rem; opacity: 0.7;">Connecté en tant que :</p>
+             <a href="profile.html" style="color: white; font-weight: bold; text-decoration: none;">Ilan Rubaud</a>
+             <div style="margin-top: 10px; border-top: 1px solid rgba(255,255,255,0.1); padding-top: 10px;">
+                <a href="index.html" style="color: #bdc3c7; font-size: 0.8rem; text-decoration: none;">➜ Déconnexion</a>
+            </div>
         </div>
-    </div>
-</aside>
+    </aside>
 
     <main class="content">
         <header>
@@ -36,7 +32,7 @@
         </header>
 
         <section class="card">
-            <form action="tickets.html">
+            <form action="tickets.html" id="ticketForm">
                 <div class="grid-2">
                     <div class="form-group">
                         <label for="project">Projet concerné</label>
@@ -72,7 +68,9 @@
                         <option value="included">Inclus dans le contrat</option>
                         <option value="billable">Facturable en supplément</option>
                     </select>
-                    <small style="color: #666;">Si facturable, le ticket devra être validé par le client.</small>
+                    <small id="billable-warning" class="hidden" style="color: var(--warning-color); font-weight: bold; display: block; margin-top: 5px;">
+                        ⚠️ Attention : Ce ticket nécessitera une validation du client avant facturation.
+                    </small>
                 </div>
 
                 <div style="margin-top: 20px;">
