--- a/Gestion_Ticketing/dashboard.html
+++ b/Gestion_Ticketing/dashboard.html
@@ -15,6 +15,7 @@
                 <li><a href="projects.html">Projets</a></li>
                 <li><a href="tickets.html">Tickets</a></li>
                 <li><a href="settings.html">Paramètres</a></li>
+                <li><a href="404.html">Statistiques (Bientôt)</a></li>
             </ul>
         </nav>
         <div class="user-info">
