--- a/Gestion_Ticketing/ticket-new.html
+++ b/Gestion_Ticketing/ticket-new.html
@@ -32,7 +32,7 @@
         </header>
 
         <section class="card">
-            <form action="tickets.html" id="ticketForm">
+            <form action="tickets.html" id="ticketForm" novalidate>
                 <div class="grid-2">
                     <div class="form-group">
                         <label for="project">Projet concerné</label>
