--- a/Gestion_Ticketing/project-new.html
+++ b/Gestion_Ticketing/project-new.html
@@ -31,7 +31,7 @@
             <h1>Nouveau Projet</h1>
         </header>
 
-        <form id="projectForm" class="card">
+        <form id="projectForm" class="card" novalidate>
             <div class="form-group">
                 <label for="client">Client</label>
                 <select id="client" name="client" required>
